Partitioning commit 2